fixed z-index issues

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 10;
     height: 3rem;
     background: white;
     -webkit-box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
@@ -386,8 +386,40 @@ h1 {
     letter-spacing: .1rem;
     cursor: pointer;
     text-transform: uppercase;
+    position: relative;
+    z-index: 1;
 }
 
+.font-style-footer-button button::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgb(83, 83, 83);
+    z-index: -1;
+    transition: transform 350ms ease-in;
+    -webkit-transition: transform 350ms ease-in;
+    -moz-transition: transform 350ms ease-in;
+    -ms-transition: transform 350ms ease-in;
+    -o-transition: transform 350ms ease-in;
+    transform: scaleX(0);
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform-origin: right;
+}
+
+.font-style-footer-button:hover button::before{
+    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    transform-origin: left;
+}
 
 
 
@@ -501,6 +533,7 @@ h1 {
     left: 14.1rem;
     width: 100%;
     color: #CBD3DE;
+    z-index: 1;
     
 }
 .footer-wrapper-right {
